# notebook

./: dune-project  notebook.opam
books/: 計算量が償却されるということ、あるいは、計算量を見積もるということ.ipynb
books/.ipynb_checkpoints/: 計算量が償却されるということ、あるいは、計算量を見積もるということ-checkpoint.ipynb
